# freezer-daemon

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  temp.csv  temp.highest
.cache/clangd/index/: event_loops.h.C30CEF2B82C9C7F1.idx  global_vars.h.8553994F3895EF3A.idx  main.c.DD25BED4184DA8B2.idx  utils.h.8D57BB3B88CCAAB7.idx
src/: CMakeLists.txt  event_loops.c  event_loops.h  global_vars.c  global_vars.h  main.c  utils.c  utils.h
